# nurpath

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/agents/: pipeline.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  db.py
backend/app/services/: catalog.py  citation.py  embeddings.py  ikhtilaf.py  ingestion.py  learning.py  quiz.py  reranker.py  retrieval.py  validation.py
backend/tests/: conftest.py  test_api.py  test_ask_api.py  test_embeddings.py  test_health_retrieval_api.py  test_ikhtilaf.py  test_ingestion.py  test_reranker.py  test_retrieval.py  test_validation_gate.py
data/: allowlist.csv
data/samples/: sources.json
docs/: architecture.md  data_licensing.md  langgraph_agent_flow.mmd  model_card.md  roadmap_12_weeks.md
eval/: run_eval.py  sample_qa.jsonl
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: nurpath-app.tsx
frontend/e2e/: nurpath.spec.ts
frontend/lib/: api.ts
infra/: prometheus.yml
scripts/: generate_langgraph_mermaid.py  reindex_embeddings.sh  run_e2e.sh  smoke_backend.sh
